Move index.html to root

--- a/index.html
+++ b/index.html
@@ -599,14 +599,12 @@
           />
           <div class="">
             <div class="col-md-6 col-sm-12">
-              <div class="table-response">
-
-              </div>
+              <div class="table-response"></div>
               <table
                 class="table table-success table-striped rounded-2 pt-2 mt-4"
               >
                 <thead class="">
-                  <tr class="table-light ">
+                  <tr class="table-light">
                     <th class="fs-5" scope="col">Index</th>
                     <th class="fs-5" scope="col">Name</th>
                     <th class="fs-5" scope="col">Price</th>
@@ -617,7 +615,7 @@
                     <th class="fs-5" scope="col">Save</th>
                   </tr>
                 </thead>
-                <tbody  id="tablebody"></tbody>
+                <tbody id="tablebody"></tbody>
               </table>
             </div>
           </div>
@@ -710,8 +708,8 @@
 
     <!-- end page 6 -->
 
-    <section id="img-sider position-relative">
-      <div class="container">
+    <section id="img-sider">
+      <div class="container position-relative">
         <div class="row">
           <div class="img-container col-md-4">
             <img
